--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  background: url("../src/assets/background.jpg") no-repeat;
+  background-size: 100% 100%;
+  padding: 25px;
+  margin: 0 0 150px;
+  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  color: #6d08da;
+}
+a:hover {
+  color: grey;
+}
+a > svg {
+  width: 40px;
+  height: 40px;
+}
+.buttonColor {
+  background-color: #6d08da;
+}
+
+.boldColor {
+  color: #6d08da;
+  font-weight: bold;
+}
+.bodyCard {
+  width: 50%;
+}
+
+.imagePosition {
+  max-height: 500px;
+}
+.sliderSize {
+  width: 50%;
+  height: 50%;
+}
+
+.priceBlock {
+  margin: 0 auto;
+}
+.contactBlock {
+  display: flex;
+  justify-content: center;
+}
+.historyDessert {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+.textWidth {
+  width: 65%;
+}
+.carouselDesign {
+  height: auto;
+  background-size: cover;
+}
+.carouselItem {
+  object-fit: cover;
+  max-width: 900px;
+  max-height: 330px;
+  margin: 0 auto;
+}
+.footer {
+  border-top: 1px solid #e8e8e8;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(77, 39, 139);
+  text-align: center;
+}
+.footerText {
+  color: white;
+  max-width: 110px;
+  align-items: center;
+  justify-content: flex-start;
+}
+.linkContact {
+  text-decoration: none;
+  color: white;
+}
+.main-block {
+  margin-bottom: 150px;
+}
+@media (max-width: 500px) {
+  .bodyCard {
+    width: 100%;
+  }
+  .sliderSize {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .historyDessert {
+    flex-direction: column;
+  }
+  .textWidth {
+    width: 100%;
+  }
 }
