--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ a > svg {
 .footer {
   border-top: 1px solid #e8e8e8;
   display: flex;
+  height: 136px;
   justify-content: center;
   position: fixed;
   left: 0;
@@ -96,6 +97,36 @@ a > svg {
 .main-block {
   margin-bottom: 150px;
 }
+.menu-list {
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.menu-list > a {
+  padding: 18px 10px;
+}
+.menu-wrapper > .hamburger-react {
+  position: fixed !important;
+  top: 10px;
+}
+
+@media (max-width: 768px) {
+  .menu-list {
+    flex-flow: column nowrap;
+    position: fixed;
+    background-color: rgb(77, 39, 139);
+    top: 0;
+    left: 0;
+    height: calc(100% - 136px);
+    width: 150px;
+    padding-top: 3.5rem;
+  }
+  .menu-list > a {
+    padding: 12px 10px;
+    color: #fff;
+  }
+}
+
 @media (max-width: 500px) {
   .bodyCard {
     width: 100%;
