--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,11 @@ a > svg {
 }
 .footer {
   border-top: 1px solid #e8e8e8;
+  padding: 15px 0 15px 0;
   display: flex;
-  height: 136px;
+  height: 60px;
   justify-content: center;
+  align-items: center;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -84,15 +86,30 @@ a > svg {
   background-color: rgb(77, 39, 139);
   text-align: center;
 }
-.footerText {
+.footer > a {
   color: white;
+  padding-right: 10px;
+}
+.footer > a:last-child {
+  padding-right: 0;
+}
+
+.footer > a:hover {
+  color: grey;
+}
+.logo-color {
+  fill: white;
+}
+.logo-color:hover {
+  fill: grey;
+}
+.footerText {
   max-width: 110px;
   align-items: center;
   justify-content: flex-start;
 }
 .linkContact {
   text-decoration: none;
-  color: white;
 }
 .main-block {
   margin-bottom: 150px;
@@ -120,7 +137,7 @@ a > svg {
     background-color: rgb(77, 39, 139);
     top: 0;
     left: 0;
-    height: calc(100% - 136px);
+    height: calc(100% - 60px);
     width: 150px;
     padding-top: 3.5rem;
   }
